--- a/css/index.css
+++ b/css/index.css
@@ -464,3 +464,57 @@ a {
   color: #4c9bfd;
   font-size: 0.2rem;
 }
+
+/* 销售区域 */
+.sales {
+  height: 3.1rem;
+}
+
+.sales .caption {
+  display: flex;
+  line-height: 1;
+}
+
+.sales h3 {
+  height: 0.225rem;
+  padding-right: 0.225rem;
+  border-right: 0.025rem solid #00f2f1;
+}
+
+.sales a {
+  padding: 0.05rem;
+  font-size: 0.2rem;
+  margin: -0.0375rem 0 0 0.2625rem;
+  border-radius: 0.0375rem;
+  color: #0bace6;
+}
+
+.sales a.active {
+  background-color: #4c9bfd;
+  color: #fff;
+}
+
+.sales .inner {
+  display: flex;
+  flex-direction: column;
+}
+
+.sales .chart {
+  flex: 1;
+  padding-top: 0.1875rem;
+  position: relative;
+}
+
+.sales .label {
+  position: absolute;
+  left: 0.525rem;
+  top: 0.225rem;
+  color: #4996f5;
+  font-size: 0.175rem;
+}
+
+.sales .line {
+  width: 100%;
+  height: 100%;
+  /* background-color: greenyellow; */
+}
